[package]
name = "classroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
rocket = "0.5.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.34.0"
